--- a/intro tidy pokemon.Rmd
+++ b/intro tidy pokemon.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  html_document: default
+  pdf_document: default
+---
 # Introduction to the tidyverse
 ### principles of tidy data - the pipe operator - data manipulation with dplyr - using ggplot2
 
@@ -21,8 +26,8 @@ ggplot2 is also contained in the tidyverse, so with the code below we are actual
 ![](https://www.rstudio.com/wp-content/uploads/2014/04/tidyverse-200x231.png) ![](https://www.rstudio.com/wp-content/uploads/2014/04/dplyr-200x232.png) ![](https://www.rstudio.com/wp-content/uploads/2014/04/ggplot2-200x232.png)
 
 ```{r}
-install.packages('tidyverse')
-install.packages('ggplot2')
+#install.packages('tidyverse')
+#install.packages('ggplot2')
 ```
 
 Installed packages are available to all your R projects. You only need to install a package once and it will be in your library. However, you need to load packages you want to work with from your library for every R project.
@@ -226,14 +231,14 @@ We now have a nice new summary dataset. It is a much better overview than the or
 - Can you produce a new dataset, that compares the average values for all stats except "total" for legendary and non-legendary pokemon? The code chunk below can do the trick. Try to fill in the blanks and make it work 
 (10min)
 
-``` {r}
+
 legendary_types <-
   pokemon_long _____ 
   ________ (stats_type _____ "total") %>% 
   group_by( _________ , stats_type) %>%
   summarise(mean( ________)) %>%
   print( _____)
-```
+  
 
 ```{r}
 legendary_types <-
@@ -265,7 +270,7 @@ With only these few simple commands, we can already do most of our descriptive s
 - We now want to do a violin plot, that compares the different statistics between legendary and non-legendary pokemon. Below you can see the code-chunk, that produces the plot. Try to fill in the blanks and make it work! 
 (8min)
 
-```{r}
+
 ______________ %>%
   group_by( ____________, stats_type) %>%
   _________(stats_value) %>%
@@ -273,7 +278,7 @@ ______________ %>%
   ggplot(aes(stats_type, ___________, fill=legendary)) +
     geom_violin(draw_quantiles = 0.5) +
     theme_classic()
-```
+
 
 ```{r}
 pokemon_long %>%
