--- a/intro tidy pokemon.Rmd
+++ b/intro tidy pokemon.Rmd
@@ -136,7 +136,9 @@ pokemon$legendary <- factor(pokemon$legendary)
 str(pokemon)
 ```
 
-Tidy data comes in a long format (remember: "each observation is a row"). The opposite is a wide format where each row is a case, which might be what you know from SPSS. Our data doesn't have a very nice long format. In the next step we will reshape our data into a better long format. 
+Tidy data comes in a long format (remember: "each observation is a row"). The opposite is a wide format where each row is a case, which might be what you know from SPSS. Our data doesn't have a very nice long format. In the next step we will reshape our data into a more long format. 
+Note that how you define what counts as one observation might depend on the questions you're trying to answer with the data. It makes sense that each individual pokemon is an observation, but we could also be interested in other entities which are currently spread out in the same row.
+
 - First, take a look at our data set: Which variables should be gathered to make the data less wide and give us one observation/row? 
 - Take a piece of paper and draw how the final long data set should look like. Which variables will we have and which values do they take? Discuss this with your neighbour or as a group.
 (10min)
